--- a/package.json
+++ b/package.json
@@ -26,21 +26,20 @@
   },
   "homepage": "https://github.com/teroneko/teronis-ts-type-mixtures#readme",
   "devDependencies": {
-    "@babel/core": "^7.1.2",
-    "@babel/preset-env": "^7.3.1",
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
     "@babel/preset-typescript": "^7.1.0",
     "awesome-typescript-loader": "^5.2.1",
-    "babel-loader": "^8.0.4",
+    "babel-loader": "^8.0.6",
     "dts-bundle-webpack": "^1.0.2",
     "source-map-loader": "^0.2.4",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
-    "webpack": "^4.29.2",
-    "webpack-cli": "^3.2.3",
-    "tslint": "^5.16.0",
-    "typescript": "^3.4.5"
+    "tslint": "^5.18.0",
+    "typescript": "^3.5.3",
+    "webpack": "^4.38.0",
+    "webpack-cli": "^3.3.6"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "peerDependencies": {
     "@teronis/ts-definitions": "^0.7.3"
   }
