--- a/package.json
+++ b/package.json
@@ -37,9 +37,9 @@
     "tslint": "^5.18.0",
     "typescript": "^3.5.3",
     "webpack": "^4.38.0",
-    "webpack-cli": "^3.3.6"
+    "webpack-cli": "^3.3.6",
+    "ts-loader": "^6.0.4"
   },
-  "dependencies": {},
   "peerDependencies": {
     "@teronis/ts-definitions": "^0.7.3"
   }
